<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="4dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f2f2">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/spagetti"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spagetti_bongu"
                android:layout_toRightOf="@+id/img1"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kob"
                android:layout_toRightOf="@+id/img1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/achte1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achte"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f2f2">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/chiritos"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sac_chiritos"
                android:layout_toRightOf="@+id/img2"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kob2"
                android:layout_toRightOf="@+id/img2"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/achte2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achte"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>